<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Karmaly</string>
    <string name="hello">Hello karmaly!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_compose">New Task</string>
    <string name="action_compose_rewards">New Reward</string>
    <string name="menu_delete">Delete</string>
    <string name="tabs_task">Tasks</string>
    <string name="tabs_rewards">Rewards</string>
    <string name="congratulations">Congratulations!</string>
	<string name="reward">You earn this reward</string>
	<string name="hiddenreward">You earn this HIDDEN reward!!</string>
	<string name="dataoptions">Data management</string>
	<string name="delete_tasks_pref">Delete all tasks</string>
	<string name="delete_rewards_pref">Delete all rewards</string>
	<string name="about_us_pref">About us</string>
	<string name="details_pref">Details</string>
	<string name="instructions_pref">Instructions</string>
	<string name="delete_user_pref">Delete User data</string>
	<string name="delete_explain_pref">Delete all the tasks</string>
	<string name="delete_rewards_explain_pref">Delete all the rewards inclusive the hidden ones</string>
	<string name="delete_user_explain_pref">The user data will be deteled and the tasks done or not done count set to 0</string>
	<string name="help_explain_pref">"Do you need help with the app? "</string>
	<string name="fisrt_empty_list">You don\'t have any items yet</string>	
	<string name="second_empty_list">""</string>
	<string name="delete_task">You are going to delete this task! Are you sure?</string>
	<string name="delete_reward">You are going to delete this reward! Are you sure?</string>
	<string name="new_task_error">Write something!</string>
	<string name="help_title">Instructions</string>
		<string name="help_text">Karmaly es una app que te ayuda a mejorar tu rutina. Decide que tareas quieres controlar, anotando las veces que la realizas o no las consigues. Karmaly permite crear recompensas que iras ganando cada vez que llegues a una cierta cantidad de tareas realizadas.\n Mi barra de recompensa no sube\n En Karmaly ganaras puntos de recompensa cada vez que realices una tarea. Pero no subirá si la puntación negativa es mayor o igual que la positiva en una tarea.</string>

	<string name="about_title">Write something!</string>
	<string name="about_text">Write something!</string>
	<string name="empty_detail">No data</string>
	<string name="info_title">Info</string>
	<string name="info_text">Use the secret option to hide the reward text. \nLet somebody write the reward and surprise yourself when you earn it. </string>
	<string name="delete_task_preference_title">Delete all tasks</string>
	<string name="delete_rewards_pref_title">Delete all rewards</string>
	<string name="delete_user_pref_title">Delete user data</string>
	<string name="surprise_cb">Surprise?</string>
	<string name="help_pref_title">Help</string>
	
</resources>