<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item android:id="@+id/action_compose"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/action_compose" android:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_compose2"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/action_compose_rewards" android:showAsAction="collapseActionView"/>
    <item android:id="@+id/delete_tasks" android:title="@string/dataoptions" android:showAsAction="never">
        <menu>
            <item android:id="@+id/delete_all_tasks" android:title="@string/delete_task_preference_title"/>
            <item android:id="@+id/delete_rewards" android:title="@string/delete_rewards_pref_title"/>
            <item android:id="@+id/delete_user_data" android:title="@string/delete_user_pref_title"/>
        </menu>
    </item>
    
    <item android:id="@+id/help" android:title="@string/help_pref_title" android:titleCondensed="Help" android:showAsAction="never"></item>
    

</menu>